create dashboard for sellers
